cmake_minimum_required(VERSION 3.0) # setting this is required
project(hackerRank)            # this sets the project name

add_subdirectory(algorithms/warmup/simpleArraySum)
add_subdirectory(algorithms/warmup/compareTheTriplets)
add_subdirectory(algorithms/warmup/aVeryBigSum)
add_subdirectory(algorithms/warmup/diagonalDifference)
add_subdirectory(algorithms/warmup/plusMinus)
add_subdirectory(algorithms/warmup/staircase)
add_subdirectory(algorithms/implementation/repeatedString)
add_subdirectory(algorithms/implementation/kangaroo)
add_subdirectory(algorithms/implementation/matrixLayerRotation)
add_subdirectory(algorithms/implementation/extraLongFactorial)
add_subdirectory(algorithms/implementation/queenAttack2)
add_subdirectory(algorithms/contests/week26/armyGame)
add_subdirectory(algorithms/contests/week26/bestDivisor)
add_subdirectory(algorithms/contests/week26/twins)
add_subdirectory(algorithms/contests/week26/musicOnTheStreet)
add_subdirectory(algorithms/contests/week26/hardHomework)
add_subdirectory(algorithms/contests/week26/satisfactoryPairs)
