cmake_minimum_required(VERSION 3.10) # setting this is required
project(hackerRank)            # this sets the project name
set(CMAKE_CXX_STANDARD 11)
#add_subdirectory(algorithms/warmup/simpleArraySum)
#add_subdirectory(algorithms/warmup/compareTheTriplets)
#add_subdirectory(algorithms/warmup/aVeryBigSum)
#add_subdirectory(algorithms/warmup/diagonalDifference)
#add_subdirectory(algorithms/warmup/plusMinus)
#add_subdirectory(algorithms/warmup/staircase)
#add_subdirectory(algorithms/implementation/repeatedString)
#add_subdirectory(algorithms/implementation/kangaroo)
#add_subdirectory(algorithms/implementation/matrixLayerRotation)
#add_subdirectory(algorithms/implementation/extraLongFactorial)
#add_subdirectory(algorithms/implementation/queenAttack2)
#add_subdirectory(algorithms/contests/week26/armyGame)
#add_subdirectory(algorithms/contests/week26/bestDivisor)
#add_subdirectory(algorithms/contests/week26/twins)
#add_subdirectory(algorithms/contests/week26/musicOnTheStreet)
#add_subdirectory(algorithms/contests/week26/hardHomework)
#add_subdirectory(algorithms/contests/week26/satisfactoryPairs)
#add_subdirectory(algorithms/implementation/formingMagicSquare)

add_executable(hackerRank main.cpp interview_preparation_kit/dynamic_programming/max_array_sum/Tests.cpp interview_preparation_kit/dynamic_programming/max_array_sum/Solution.cpp interview_preparation_kit/dynamic_programming/abbbreviation/Tests.cpp interview_preparation_kit/dynamic_programming/abbbreviation/Solution.cpp interview_preparation_kit/dynamic_programming/candy/Tests.cpp interview_preparation_kit/dynamic_programming/candy/Solution.cpp)